2003-02-15  Karl Heinz Kremer <khk@khk.net>

	* backend/epson.c backend/epson_usb.[ch]: Fix problem with 
	  "usb <vendor> <product> syntax in config file

2003-02-13  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Updated Canon, Fujitsu, and
	  Plustek entries. 
	* TODO: Added entries about v4l, fujitsu, snapscan.

2003-02-11  Peter Fales <peter@fales-lorenz.net>

	* backend/dll.conf, doc/sane-gphoto2.man:  Added a commented out
	  gphoto2 entry in dll.conf, and mentioned it in the man page.

	* backend/gphoto2.c: Bug fixes.  Don't coredump if the 
	  gphoto2.conf file is missing, and don't require a speed to
	  be set if the usb port is used.
	  
2003-02-11  Peter Kirchgessner <peter@kirchgessner.net>

	* backend/hp-handle.c: Fix problem with ifdef/ifndef for threads

2003-02-11  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* aclocal.m4 acinclude.m4 configure configure.in: Check for MacOS X
	  native dynamic loading first before lookinf for libdl.

2003-02-09  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* frontend/saned.c sanei/sanei_codec_bin.c sanei/sanei_wire.c: Check
	  the IP address of the remote host before any communication occurs.
	  Check for a errors before trsuting values that came from remote.
	  Make sure that strings are 0-terminated.
	* po/Makefile.in po/sane-backends.nl.po: Added dutch (nl) translations
	  for sane-backends (from Bertrik Sikken <bertrik@zonnet.nl>).
	* doc/saned.man: More warnings about security issues. Make more clear
	  that -s and -d can't be used in inetd mode.
	* PROBLEMS: Moved "memory exhausted" and missing scsi headers problems
	  to README.linux. Removed SG_BIG_BUF problem. Rewrote Mustek "exceed
	  the physical scan area" problem as it applies to most flatbed
	  scanners. Added info about test backend. Added info about saned
	  security issues.
	* README.linux: Moved "memory exhausted" and missing scsi headers
	  problems from PROBLEMS.